--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Street Fighter</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  
+  <!--Selve Canvas Elementet-->
+  <canvas></canvas>
+  <!--Legger til JavaScript Kode-->
+  <script src="index.js"></script>
 </body>
 </html>
