--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!--Selve Canvas Elementet-->
   <canvas></canvas>
   <!--Legger til JavaScript Kode-->
+  <script src="classes.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
