små justeringer på health bar

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Street Fighter</title>
   <!--Linker til CSS filen-->
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-
+<div class="gameArea">
+  <div class="healthArea">
+    <div id="playerHealth"></div>
+    <div id="timer"> 60</div>
+    <div id="enemyHealth"></div>
+  </div>
   <!--Canvas elementet-->
   <canvas></canvas>
-
+</div>
   <!--Kobler til Javascript-->
   <script src="classes.js"></script>
   <script src="index.js"></script>
-  
+
 </body>
 </html>
